# wiserone

./: .gitignore  2024_01_21index.html  AUTHORS.md  CONTRIBUTING.md  Cargo.toml  README.md  TEMPLATE.md  build.rs  index.html  rustfmt.toml
.github/: CODE-OF-CONDUCT.md  CODEOWNERS  SECURITY.md
.github/workflows/: audit.yml  check.yml  document.yml  lint.yml  release.yml  test.yml
_layouts/: quote.html
benches/: criterion.rs
docs/: 2024_01_01.html  2024_01_02.html  2024_01_03.html  2024_01_04.html  2024_01_05.html  2024_01_06.html  2024_01_07.html  2024_01_08.html  2024_01_09.html  2024_01_10.html  2024_01_11.html  2024_01_12.html  2024_01_13.html  2024_01_14.html  2024_01_15.html  2024_01_16.html  2024_01_17.html  2024_01_18.html  2024_01_19.html  2024_01_20.html  2024_01_21.html  2024_01_22.html  2024_01_23.html  2024_01_24.html  2024_01_25.html  2024_01_26.html  2024_01_27.html  2024_01_28.html  2024_01_29.html  2024_01_30.html  2024_01_31.html  2024_02_01.html  2024_02_02.html  2024_02_03.html  2024_02_04.html  2024_02_05.html  2024_02_06.html  2024_02_07.html  2024_02_08.html  2024_02_09.html  (+25 more)
examples/: example.rs
quotes/: 01-quotes.csv  01-quotes.json  02-quotes.csv  02-quotes.json
src/: ascii.rs  cli.rs  html.rs  lib.rs  loggers.rs  macros.rs  main.rs  quotes.rs  sitemap.rs
tests/: test_ascii.rs  test_loggers.rs  test_quotes.rs  test_sitemap.rs
